# pych9329-hid

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
src/: __init__.py  keymap.py
src/pych9329/: __init__.py
src/pych9329_hid/: __init__.py  ch9329.py  config.py  hid.py  keymap.py  transport.py
tests/: conftest.py  test_boundary_values.py  test_ch9329.py  test_ch9329_comprehensive.py  test_ch9329_extra.py  test_chip_reset.py  test_config.py  test_config_validation.py  test_custom_descriptor_enable.py  test_error_handling.py  test_get_config.py  test_get_usb_descriptor.py  test_hid_extra.py  test_hid_hotkey_edge_cases.py  test_hid_keyboard.py  test_hid_mouse.py  test_hid_parameterized.py  test_hidautogui.py  test_keymap.py  test_parameter_validation.py  test_set_default.py  test_set_usb_descriptor.py  test_setter_methods.py  test_transport.py  test_version_string.py
tests/functional/: config.py  keyboard.py  mouse copy.py  mouse.py  test_bench.html
